gatewayapi/deployment-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avi-hello-world-v3
  namespace: default
  labels:
    app: avi-hello
    version: v3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: avi-hello
      version: v3
  template:
    metadata:
      labels:
        app: avi-hello
        version: v3
    spec:
      containers:
      - name: hello
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "10m"
            memory: "32Mi"
          limits:
            cpu: "50m"
            memory: "64Mi"
