gatewayapi/demoapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avi-hello-world
  namespace: default
  labels:
    app: avi-hello
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: avi-hello
  template:
    metadata:
      labels:
        app: avi-hello
    spec:
      containers:
      - name: hello
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "10m"
            memory: "32Mi"
          limits:
            cpu: "50m"
            memory: "64Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: avi-hello-svc
  namespace: default
  labels:
    app: avi-hello
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: avi-hello
