gatewayapi/service-svc-liveness.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-liveness
  namespace: default
  labels:
    app: avi-hello
    version: v1
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: avi-hello-test
    version: v1
