gatewayapi/service-svc-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-v1
  namespace: default
  labels:
    app: avi-hello
    version: v1
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: avi-hello
    version: v1
