gatewayapi/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gw-multiple-listeners
spec:
  gatewayClassName: avi-lb
  listeners:
    - name: foo-http
      protocol: HTTP
      port: 80
      hostname: '*.110.ams.avilab.eu'
    - name: bar-https
      protocol: HTTPS
      port: 443
      tls:
        certificateRefs:
          - kind: Secret
            group: ''
            name: wilcardcert
      hostname: '*.110.ams.avilab.eu'
