gatewayapi/httproute-my-http-app-liveness.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-liveness
spec:
  parentRefs:
    - name: gw-multiple-listeners
  rules:
    - name: app-v1
      matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: svc-liveness
          port: 80
  hostnames:
    - app-liveness.110.ams.avilab.eu
