gatewayapi/httproute-my-http-app-v1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-http-app-v1
spec:
  parentRefs:
    - name: gw-multiple-listeners
  rules:
    - name: app-v1
      matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: svc-v1
          port: 80
  hostnames:
    - app-v1.110.ams.avilab.eu
