gatewayapi/httproute-v2.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-http-app-v2
spec:
  parentRefs:
    - name: gw-multiple-listeners
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: svc-v2
          port: 80
  hostnames:
    - app-v2.110.ams.avilab.eu
